@@ -29,9 +29,11 @@ AC_CHECK_FUNCS([memset memmove strerror])
 # Dependencies
 GTK_REQUIRED_VERSION=2.8.0
 LIBXML_REQUIRED_VERSION=2.5.0
+GNOME_PRINT_REQUIRED_VERSION=2.8.0
 
 AC_SUBST(GTK_REQUIRED_VERSION)
 AC_SUBST(LIBXML_REQUIRED_VERSION)
+AC_SUBST(GNOME_PRINT_REQUIRED_VERSION)
 
 # Pull glib-genmarshal & co.
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
@@ -58,6 +60,30 @@ BUILD_EGG_REGEX=true
 AM_CONDITIONAL(BUILD_EGG_REGEX,$BUILD_EGG_REGEX)
 # this macro is defined in acinclude.m4
 GTK_SOURCE_VIEW_AC_PCRE
+
+# Check for gnomeprint support
+AC_ARG_ENABLE(gnomeprint, AC_HELP_STRING([--disable-gnomeprint],
+		 [disable gnomeprint support. Do this only if you are using gtksourceview in a custom application.]),
+[case "${enableval}" in
+  yes) enable_gnomeprint=true ;;
+  no)  enable_gnomeprint=false ;;
+  *) AC_MSG_ERROR(bad value ${enableval} for --enable-gnomeprint) ;;
+esac],
+[enable_gnomeprint=true]) dnl default
+
+msg_gnomeprint=no
+AM_CONDITIONAL(HAVE_GNOMEPRINT, false)
+
+if test "$enable_gnomeprint" = "true"; then
+	PKG_CHECK_MODULES(GNOMEPRINT,
+			libgnomeprint-2.2 >= $GNOME_PRINT_REQUIRED_VERSION,
+			[AM_CONDITIONAL(HAVE_GNOMEPRINT, true)
+			 AC_DEFINE(HAVE_GNOMEPRINT, [], [using gnomeprint])
+			 msg_gnomeprint=yes],
+			[AM_CONDITIONAL(HAVE_GNOMEPRINT, false)])
+	AC_SUBST(GNOMEPRINT_CFLAGS)
+	AC_SUBST(GNOMEPRINT_LIBS)
+fi
 
 # Do we build optional tests?
 AC_ARG_ENABLE(build_tests,AC_HELP_STRING([--disable-build-tests],
@@ -120,5 +146,6 @@ Configuration:
 
 	Source code location:	${srcdir}
 	Compiler:		${CC}
+	gnome-print support:	$msg_gnomeprint
 	build tests:		$msg_tests
 "
